# Rust

./: README.md
Chip-8/: Cargo.toml
Chip-8/src/: main.rs
Chip-8/src/interpreter/: instruction.rs  mod.rs  pixel.rs  test.rs
Exercism/: README.md
Exercism/src/: acronym.rs  all_your_base.rs  allergies.rs  alphametics.rs  anagram.rs  armstrong_numbers.rs  assembly_line.rs  beer_song.rs  binary_search.rs  bowling.rs  clock.rs  difference_of_squares.rs  gigasecond.rs  health_statistics.rs  low-power_embedded_game.rs  lucians_lucious_lasagna.rs  luhn.rs  magazine_cutout.rs  main.rs  minesweeper.rs  reverse_string.rs  role-playing_game.rs  rpn_calcualator.rs  run_length_encoding.rs  semi_structures_logs.rs  short_fibonacci_sequence.rs  space_age.rs  sublist.rs
adder/src/: lib.rs
branches/src/: main.rs
collections/src/: main.rs
enums/src/: main.rs
functions/src/: main.rs
guessing game/src/: main.rs
guessing game/src/guessing_game/: mod.rs
minesweeper/: Cargo.toml  index.html
minesweeper/src/: lib.rs  minesweeper.rs  random.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs  tests.rs
ownership/src/: main.rs
raytracer/: Cargo.toml
raytracer/src/: camera.rs  main.rs  material.rs  object.rs  ray.rs  vector.rs
restaurant/src/: lib.rs
smart_pointers/src/: lib.rs  main.rs
structs/src/: main.rs
threads/src/: main.rs
tic-tac-toe/src/: main.rs
traits/src/: lib.rs  main.rs
variables/src/: main.rs
