[package]
name = "Chip-8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8_base = "0.2"
env_logger = "0.9.0"
log = "0.4.17"
rand = "0.8.5"
clap = {version = "4.0.18", features = ["cargo", "derive"]}
